--- a/config/default.properties
+++ b/config/default.properties
@@ -324,7 +324,7 @@ com.xceptance.xlt.maxErrors = 1000
 ## - "phantomjs" ................. PhantomJSDriver 
 ## - "safari" .................... SafariDriver 
 ## - "xlt" ....................... XltDriver (default) 
-xlt.webDriver = firefox_clientperformance
+xlt.webDriver = firefox
 
 ## The path to the driver server executable, if the respective driver requires
 ## one. If you do not specify a path, the driver server must be in your PATH.
@@ -445,3 +445,12 @@ com.xceptance.xlt.useHighPrecisionTimer = true
 ## to connect to the agent JVM when this layer is active. If so, switch it
 ## off temporarily.
 #com.xceptance.xlt.socket.collectNetworkData = true
+
+
+#####################################################################
+#
+# Visual Assertion Properties Include
+#
+#####################################################################
+com.xceptance.xlt.propertiesInclude.1 = visualassertion.properties
+
