--- a/.classpath
+++ b/.classpath
@@ -2,75 +2,75 @@
 <classpath>
 	<classpathentry excluding="foo/|foo/" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/aws-java-sdk-core-1.9.3.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/aws-java-sdk-ec2-1.9.3.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/commons-cli-1.2.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/commons-configuration-1.10.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/commons-exec-1.1.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/commons-lang3-3.3.2.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/commons-lang-2.6.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/commons-math-2.2.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/commons-vfs2-2.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/cssparser-0.9.14.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/freemarker-2.3.21.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/gson-2.3.1.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/guava-18.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/hessian-4.0.38.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/htmlunit-core-js-2.15.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/httpclient-4.3.3.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/httpcore-4.3.2.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/httpmime-4.3.3.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jackson-annotations-2.3.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jackson-core-2.3.2.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jackson-databind-2.3.2.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/javax.servlet-3.0.0.v201112011016.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jaxen-1.1.6.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jcommon-1.0.23.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jetty-continuation-8.1.15.v20140411.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jetty-http-8.1.15.v20140411.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jetty-io-8.1.15.v20140411.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jetty-security-8.1.15.v20140411.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jetty-server-8.1.15.v20140411.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jetty-servlet-8.1.15.v20140411.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jetty-util-8.1.15.v20140411.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jetty-websocket-8.1.15.v20140411.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jfreechart-1.0.19.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/jna-3.4.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/joda-time-2.8.1.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/json-20140107.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/nekohtml-1.9.21.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/netty-3.5.2.Final.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/phantomjsdriver-1.2.1.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/platform-3.4.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/sac-1.3.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/selenium-api-2.45.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/selenium-chrome-driver-2.45.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/selenium-firefox-driver-2.45.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/selenium-htmlunit-driver-2.45.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/selenium-ie-driver-2.45.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/selenium-java-2.45.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/selenium-leg-rc-2.45.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/selenium-remote-driver-2.45.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/selenium-safari-driver-2.45.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/selenium-support-2.45.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/serializer-2.7.1.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/slf4j-api-1.7.7.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/slf4j-log4j12-1.7.7.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/trove4j-3.0.3.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/webbit-0.4.14.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/xalan-2.7.1.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/xercesImpl-2.11.0.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/xlt-4.5.5.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/xml-apis-1.4.01.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/xmlpull-1.1.3.1.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/xpp3_min-1.1.4c.jar"/>
-	<classpathentry kind="lib" path="/home/daniel/xlt-4.5.5/lib/xstream-1.4.7.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/aws-java-sdk-core-1.9.3.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/aws-java-sdk-ec2-1.9.3.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/commons-configuration-1.10.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/commons-exec-1.1.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/commons-lang3-3.3.2.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/commons-math-2.2.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/commons-vfs2-2.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/cssparser-0.9.14.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/freemarker-2.3.21.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/guava-18.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/hessian-4.0.38.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/htmlunit-core-js-2.15.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/httpclient-4.3.3.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/httpmime-4.3.3.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jackson-annotations-2.3.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jackson-core-2.3.2.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jackson-databind-2.3.2.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/javax.servlet-3.0.0.v201112011016.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jaxen-1.1.6.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jetty-continuation-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jetty-http-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jetty-io-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jetty-security-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jetty-server-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jetty-servlet-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jetty-util-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jetty-websocket-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/jna-3.4.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/joda-time-2.8.1.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/json-20140107.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/nekohtml-1.9.21.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/netty-3.5.2.Final.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/phantomjsdriver-1.2.1.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/platform-3.4.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/sac-1.3.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/selenium-api-2.45.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/selenium-chrome-driver-2.45.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/selenium-firefox-driver-2.45.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/selenium-htmlunit-driver-2.45.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/selenium-ie-driver-2.45.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/selenium-java-2.45.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/selenium-leg-rc-2.45.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/selenium-remote-driver-2.45.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/selenium-safari-driver-2.45.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/selenium-support-2.45.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/serializer-2.7.1.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/slf4j-api-1.7.7.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/slf4j-log4j12-1.7.7.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/trove4j-3.0.3.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/webbit-0.4.14.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/xalan-2.7.1.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/xercesImpl-2.11.0.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/xlt-4.5.6-snapshot.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/xmlpull-1.1.3.1.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="/home/rschwietzke/projects/loadtest/xlt-4.5.6-snapshot/lib/xstream-1.4.7.jar"/>
+	<classpathentry kind="output" path="classes"/>
 </classpath>
