removed "old" code

--- a/config/visualassertion.properties
+++ b/config/visualassertion.properties
@@ -10,4 +10,4 @@ com.xceptance.xlt.visualassertion.trainingsMode=false
 com.xceptance.xlt.visualassertion.mask.close=true
 com.xceptance.xlt.visualassertion.mask.close.width=10
 com.xceptance.xlt.visualassertion.mask.close.height=10
-com.xceptance.xlt.visualassertion.algorithm=EXACT
+com.xceptance.xlt.visualassertion.algorithm=FUZZY
