Replaced deprecated things

--- a/config/visualassertion.properties
+++ b/config/visualassertion.properties
@@ -11,3 +11,8 @@ com.xceptance.xlt.visualassertion.mask.close=true
 com.xceptance.xlt.visualassertion.mask.close.width=10
 com.xceptance.xlt.visualassertion.mask.close.height=10
 com.xceptance.xlt.visualassertion.algorithm=FUZZY
+
+## ID can be used to further differentiate the execution
+## environment to make it less painful to run a lot 
+## servers or the like at the same time
+com.xceptance.xlt.visualassertion.ID=jenkins
