Changed marking color and highlighter, some code formatting as well

--- a/config/visualassertion.properties
+++ b/config/visualassertion.properties
@@ -1,16 +1,27 @@
 com.xceptance.xlt.visualassertion.resultDirectory=results/visualassertion
-com.xceptance.xlt.visualassertion.waitingTime=300
+com.xceptance.xlt.visualassertion.waitingTime=1000
+
 com.xceptance.xlt.visualassertion.mark.blocksize.x=10
 com.xceptance.xlt.visualassertion.mark.blocksize.y=10
+
+# FUZZY:
+# COLORFUZZY: 
+# EXACT: 
+com.xceptance.xlt.visualassertion.algorithm=FUZZY
+
 com.xceptance.xlt.visualassertion.tolerance.colors=0.1
-com.xceptance.xlt.visualassertion.tolerance.pixels=0.1
+com.xceptance.xlt.visualassertion.tolerance.pixels=0.0
 com.xceptance.xlt.visualassertion.fuzzy.blocksize.xy=10
 com.xceptance.xlt.visualassertion.onFailure.createDifferenceImage=true
+
+## Shall the tool train itself to mark changed area instead of complaining?
+## Simply run again and again for a while to make the tool learn as much
+## as possible about difference.
 com.xceptance.xlt.visualassertion.trainingsMode=false
-com.xceptance.xlt.visualassertion.mask.close=true
+
+com.xceptance.xlt.visualassertion.mask.close=false
 com.xceptance.xlt.visualassertion.mask.close.width=10
 com.xceptance.xlt.visualassertion.mask.close.height=10
-com.xceptance.xlt.visualassertion.algorithm=FUZZY
 
 ## ID can be used to further differentiate the execution
 ## environment to make it less painful to run a lot 
