Added the option to mark differently

--- a/config/visualassertion.properties
+++ b/config/visualassertion.properties
@@ -4,6 +4,11 @@ com.xceptance.xlt.visualassertion.waitingTime=1000
 com.xceptance.xlt.visualassertion.mark.blocksize.x=10
 com.xceptance.xlt.visualassertion.mark.blocksize.y=10
 
+## How the marking should look like
+# box: Draw a box with blocksize and the difference pixel is in it
+# marker: use yellow highlighter and mark pixel over it
+com.xceptance.xlt.visualassertion.mark.type=box
+
 # FUZZY: Use color and pixel difference values
 # COLORFUZZY: Color difference is ok, but pixel diff is exactly evaluated
 # EXACT: Does not use any thresholds
