Permit to enabled the entire processing and screenshooting

--- a/config/visualassertion.properties
+++ b/config/visualassertion.properties
@@ -1,3 +1,6 @@
+# global flag to turn it off, nothing will be done, all code skipped
+com.xceptance.xlt.visualassertion.enabled=true
+
 com.xceptance.xlt.visualassertion.resultDirectory=results/visualassertion
 com.xceptance.xlt.visualassertion.waitingTime=1000
 
