Package changes and additional comments to ImageHelper

--- a/config/visualassertion.properties
+++ b/config/visualassertion.properties
@@ -25,7 +25,7 @@ com.xceptance.xlt.visualassertion.onFailure.createDifferenceImage=true
 ## Shall the tool train itself to mark changed area instead of complaining?
 ## Simply run again and again for a while to make the tool learn as much
 ## as possible about difference.
-com.xceptance.xlt.visualassertion.trainingsMode=false
+com.xceptance.xlt.visualassertion.trainingsMode=true
 
 # Shall we close the masks a little to make the covered area larger?
 com.xceptance.xlt.visualassertion.mask.close=false
