Switched out the pixel int[][] array with a pixel representation as Point object

--- a/config/visualassertion.properties
+++ b/config/visualassertion.properties
@@ -15,7 +15,7 @@ com.xceptance.xlt.visualassertion.mark.type=box
 # FUZZY: Use color and pixel difference values
 # COLORFUZZY: Color difference is ok, but pixel diff is exactly evaluated
 # EXACT: Does not use any thresholds
-com.xceptance.xlt.visualassertion.algorithm=COLORFUZZY
+com.xceptance.xlt.visualassertion.algorithm=FUZZY
 
 com.xceptance.xlt.visualassertion.tolerance.colors=0.1
 com.xceptance.xlt.visualassertion.tolerance.pixels=0.0
@@ -25,7 +25,7 @@ com.xceptance.xlt.visualassertion.onFailure.createDifferenceImage=true
 ## Shall the tool train itself to mark changed area instead of complaining?
 ## Simply run again and again for a while to make the tool learn as much
 ## as possible about difference.
-com.xceptance.xlt.visualassertion.trainingsMode=true
+com.xceptance.xlt.visualassertion.trainingsMode=false
 
 # Shall we close the masks a little to make the covered area larger?
 com.xceptance.xlt.visualassertion.mask.close=false
