Documentation in README and properties started

--- a/config/visualassertion.properties
+++ b/config/visualassertion.properties
@@ -1,38 +1,58 @@
 # global flag to turn it off, nothing will be done, all code skipped
 com.xceptance.xlt.visualassertion.enabled=true
 
+# result dirctory for the image output
 com.xceptance.xlt.visualassertion.resultDirectory=results/visualassertion
+
+# the time the program waits for a page to load before it takes the screenshot
 com.xceptance.xlt.visualassertion.waitingTime=1000
 
+# the size of a marking around one pixel that was determined as different
 com.xceptance.xlt.visualassertion.mark.blocksize.x=10
 com.xceptance.xlt.visualassertion.mark.blocksize.y=10
 
-## How the marking should look like
+## How the marking should look like - marking type
 # box: Draw a box with blocksize and the difference pixel is in it
 # marker: use yellow highlighter and mark pixel over it
 com.xceptance.xlt.visualassertion.mark.type=box
 
-# FUZZY: Use color and pixel difference values
-# COLORFUZZY: Color difference is ok, but pixel diff is exactly evaluated
-# EXACT: Does not use any thresholds
+# FUZZY: Uses color and pixel difference thresholds that determine when the difference in 
+# a block of pixels is a mistake. First the difference in color between each pixel in a block
+# is checked, if the number of pixels, for which the color difference is too high,
+# exceeds the number limit in one block, those differences are seen as mistake and marked. 
+# COLORFUZZY: Only uses a color threshold to determine a layout mistake. One detected difference will 
+# fail the test.
+# EXACT: Does not use any thresholds, but checks for exact pixel by pixel match of the two pages.
 com.xceptance.xlt.visualassertion.algorithm=FUZZY
 
+# color threshold for COLORFUZZY and FUZZY. Takes a value between 0 and 1 that stands for the 
+# color difference in percent between two pixels. 0 is equal to an exact pixel by pixel comparison, where
+# no difference is allowed.
 com.xceptance.xlt.visualassertion.tolerance.colors=0.1
+
+# number of pixel differences threshold for FUZZY in one comparison block. Takes a value between 0 and 1 that 
+# stands for the percentage of different pixels in one block. 0 is equal to an exact pixel by pixel comparison and
+# one pixel difference is seen as mistake. 
 com.xceptance.xlt.visualassertion.tolerance.pixels=0.0
+
+# the side length of one comparison block for the FUZZY algorithm. Takes integer values that stand for the number of 
+# pixels per side.
 com.xceptance.xlt.visualassertion.fuzzy.blocksize.xy=10
+
+# flag whether a image shall be created, which displays only the found differences in greyscale on a black background
 com.xceptance.xlt.visualassertion.onFailure.createDifferenceImage=true
 
-## Shall the tool train itself to mark changed area instead of complaining?
-## Simply run again and again for a while to make the tool learn as much
-## as possible about difference.
+# flag whether the training mode of the image mask is enabled. While in training mode the module saves found differences
+# in a mask, which can be used to train the algorithms to ignore valid dynamic content changes in the images. Additional training
+# runs adjust the mask further. 
 com.xceptance.xlt.visualassertion.trainingsMode=false
 
-# Shall we close the masks a little to make the covered area larger?
+# flag wheter the masked area shall be increased to better mask content changes that are valid
 com.xceptance.xlt.visualassertion.mask.close=false
+# size of the masking area around one pixel
 com.xceptance.xlt.visualassertion.mask.close.width=10
 com.xceptance.xlt.visualassertion.mask.close.height=10
 
-## ID can be used to further differentiate the execution
-## environment to make it less painful to run a lot 
-## servers or the like at the same time
+## ID for the current environment that hosts the visualassertion module. 
+## The ID is used in the creation of the folder structure for the results. 
 com.xceptance.xlt.visualassertion.ID=localmachine
