--- a/config/visualassertion.properties
+++ b/config/visualassertion.properties
@@ -1,13 +1,37 @@
-# global flag to turn it off, nothing will be done, all code skipped
+#######################################################################
+#The possible properties and their default values are:   
+#com.xceptance.xlt.imageComparison.waitTime=300   
+#com.xceptance.xlt.imageComparison.markBlockX=10   
+#com.xceptance.xlt.imageComparison.markBlockY=10   
+#com.xceptance.xlt.imageComparison.directory=no default   
+#com.xceptance.xlt.imageComparison.pixelPerBlockXY=20   
+#com.xceptance.xlt.imageComparison.colTolerance=0.1   
+#com.xceptance.xlt.imageComparison.pixTolerance=0.2   
+#com.xceptance.xlt.imageComparison.trainingMode=false   
+#com.xceptance.xlt.imageComparison.closeMask=false   
+#com.xceptance.xlt.imageComparison.closeWidth=5   
+#com.xceptance.xlt.imageComparison.closeHeight=5   
+#com.xceptance.xlt.imageComparison.differenceImage=true   
+#com.xceptance.xlt.imageComparison.algorithm=FUZZY  
+#########################################################################
+
+# Global flag to turn it off, nothing will be done, all code skipped
 com.xceptance.xlt.visualassertion.enabled=true
 
-# result dirctory for the image output
+# Result dirctory for the image output
 com.xceptance.xlt.visualassertion.resultDirectory=results/visualassertion
 
-# the time the program waits for a page to load before it takes the screenshot
+## ID for the current environment that hosts the visualassertion module. 
+## The ID is used in the creation of the folder structure for the results. 
+## This should be used like this for now, because different environment create different screenshot which might cause an assertion to
+## fail, even if the page is still valid.
+com.xceptance.xlt.visualassertion.ID=localmachine
+
+# The time the program waits for a page to load before it takes the screenshot
 com.xceptance.xlt.visualassertion.waitingTime=1000
 
-# the size of a marking around one pixel that was determined as different
+# These parameters determine the width and height of the blocks used for marking and masking. While the size of the blocks during marking 
+# is purely cosmetic, for masking it causes an increase in the ignored area
 com.xceptance.xlt.visualassertion.mark.blocksize.x=10
 com.xceptance.xlt.visualassertion.mark.blocksize.y=10
 
@@ -16,6 +40,7 @@ com.xceptance.xlt.visualassertion.mark.blocksize.y=10
 # marker: use yellow highlighter and mark pixel over it
 com.xceptance.xlt.visualassertion.mark.type=box
 
+# The algorithm used for the determination of layout mistakes. 
 # FUZZY: Uses color and pixel difference thresholds that determine when the difference in 
 # a block of pixels is a mistake. First the difference in color between each pixel in a block
 # is checked, if the number of pixels, for which the color difference is too high,
@@ -25,34 +50,33 @@ com.xceptance.xlt.visualassertion.mark.type=box
 # EXACT: Does not use any thresholds, but checks for exact pixel by pixel match of the two pages.
 com.xceptance.xlt.visualassertion.algorithm=FUZZY
 
-# color threshold for COLORFUZZY and FUZZY. Takes a value between 0 and 1 that stands for the 
+# Color threshold for COLORFUZZY and FUZZY. Takes a value between 0 and 1 that stands for the 
 # color difference in percent between two pixels. 0 is equal to an exact pixel by pixel comparison, where
 # no difference is allowed.
 com.xceptance.xlt.visualassertion.tolerance.colors=0.1
 
-# number of pixel differences threshold for FUZZY in one comparison block. Takes a value between 0 and 1 that 
+# Number of pixel differences threshold for FUZZY in one comparison block. Takes a value between 0 and 1 that 
 # stands for the percentage of different pixels in one block. 0 is equal to an exact pixel by pixel comparison and
 # one pixel difference is seen as mistake. 
 com.xceptance.xlt.visualassertion.tolerance.pixels=0.0
 
-# the side length of one comparison block for the FUZZY algorithm. Takes integer values that stand for the number of 
-# pixels per side.
+# The side length of one comparison block for the FUZZY algorithm. Takes integer values that stand for the number of 
+# pixels per side. The values provide a way to tolerate shifts of small objects, especially text. The values divide the image 
+# into squares with a width=height=value. -> Block = xy * xy
 com.xceptance.xlt.visualassertion.fuzzy.blocksize.xy=10
 
-# flag whether a image shall be created, which displays only the found differences in greyscale on a black background
+# Flag whether a image shall be created, which displays only the found differences in greyscale on a black background
 com.xceptance.xlt.visualassertion.onFailure.createDifferenceImage=true
 
-# flag whether the training mode of the image mask is enabled. While in training mode the module saves found differences
+# Flag whether the training mode of the image mask is enabled. While in training mode the module saves found differences
 # in a mask, which can be used to train the algorithms to ignore valid dynamic content changes in the images. Additional training
 # runs adjust the mask further. 
 com.xceptance.xlt.visualassertion.trainingsMode=false
 
-# flag wheter the masked area shall be increased to better mask content changes that are valid
+# Flag wheter the masked area shall be increased to better mask content changes that are valid
 com.xceptance.xlt.visualassertion.mask.close=false
-# size of the masking area around one pixel
+
+# Size of the masking area that is filled inbetween pixels that have been found as different 
 com.xceptance.xlt.visualassertion.mask.close.width=10
 com.xceptance.xlt.visualassertion.mask.close.height=10
 
-## ID for the current environment that hosts the visualassertion module. 
-## The ID is used in the creation of the folder structure for the results. 
-com.xceptance.xlt.visualassertion.ID=localmachine
