Testing process, problem with mask close found

--- a/config/visualassertion.properties
+++ b/config/visualassertion.properties
@@ -48,7 +48,7 @@ com.xceptance.xlt.visualassertion.mark.type=box
 # COLORFUZZY: Only uses a color threshold to determine a layout mistake. One detected difference will 
 # fail the test.
 # EXACT: Does not use any thresholds, but checks for exact pixel by pixel match of the two pages.
-com.xceptance.xlt.visualassertion.algorithm=FUZZY
+com.xceptance.xlt.visualassertion.algorithm=EXACT
 
 # Color threshold for COLORFUZZY and FUZZY. Takes a value between 0 and 1 that stands for the 
 # color difference in percent between two pixels. 0 is equal to an exact pixel by pixel comparison, where
@@ -73,8 +73,8 @@ com.xceptance.xlt.visualassertion.onFailure.createDifferenceImage=true
 # runs adjust the mask further. 
 com.xceptance.xlt.visualassertion.trainingsMode=false
 
-# Flag wheter the masked area shall be increased to better mask content changes that are valid
-com.xceptance.xlt.visualassertion.mask.close=false
+# Flag whether the masked area shall be increased to better mask content changes that are valid
+com.xceptance.xlt.visualassertion.mask.close=true
 
 # Size of the masking area that is filled inbetween pixels that have been found as different 
 com.xceptance.xlt.visualassertion.mask.close.width=10
