Bug found -> Parameters of a method were switched, but not in all method calls

--- a/config/visualassertion.properties
+++ b/config/visualassertion.properties
@@ -48,7 +48,7 @@ com.xceptance.xlt.visualassertion.mark.type=box
 # COLORFUZZY: Only uses a color threshold to determine a layout mistake. One detected difference will 
 # fail the test.
 # EXACT: Does not use any thresholds, but checks for exact pixel by pixel match of the two pages.
-com.xceptance.xlt.visualassertion.algorithm=EXACT
+com.xceptance.xlt.visualassertion.algorithm=FUZZY
 
 # Color threshold for COLORFUZZY and FUZZY. Takes a value between 0 and 1 that stands for the 
 # color difference in percent between two pixels. 0 is equal to an exact pixel by pixel comparison, where
@@ -58,7 +58,7 @@ com.xceptance.xlt.visualassertion.tolerance.colors=0.1
 # Number of pixel differences threshold for FUZZY in one comparison block. Takes a value between 0 and 1 that 
 # stands for the percentage of different pixels in one block. 0 is equal to an exact pixel by pixel comparison and
 # one pixel difference is seen as mistake. 
-com.xceptance.xlt.visualassertion.tolerance.pixels=0.0
+com.xceptance.xlt.visualassertion.tolerance.pixels=0.1
 
 # The side length of one comparison block for the FUZZY algorithm. Takes integer values that stand for the number of 
 # pixels per side. The values provide a way to tolerate shifts of small objects, especially text. The values divide the image 
@@ -71,10 +71,10 @@ com.xceptance.xlt.visualassertion.onFailure.createDifferenceImage=true
 # Flag whether the training mode of the image mask is enabled. While in training mode the module saves found differences
 # in a mask, which can be used to train the algorithms to ignore valid dynamic content changes in the images. Additional training
 # runs adjust the mask further. 
-com.xceptance.xlt.visualassertion.trainingsMode=false
+com.xceptance.xlt.visualassertion.trainingsMode=true
 
 # Flag whether the masked area shall be increased to better mask content changes that are valid
-com.xceptance.xlt.visualassertion.mask.close=true
+com.xceptance.xlt.visualassertion.mask.close=false
 
 # Size of the masking area that is filled inbetween pixels that have been found as different 
 com.xceptance.xlt.visualassertion.mask.close.width=10
