Checked TODOs and removed done ones.

--- a/config/visualassertion.properties
+++ b/config/visualassertion.properties
@@ -31,14 +31,14 @@ com.xceptance.xlt.visualassertion.ID=localmachine
 com.xceptance.xlt.visualassertion.waitingTime=1000
 
 # These parameters determine the width and height of the blocks used for marking and masking. While the size of the blocks during marking 
-# is purely cosmetic, for masking it causes an increase in the ignored area
+# is purely cosmetic, for masking it causes an increase in the masked area
 com.xceptance.xlt.visualassertion.mark.blocksize.x=10
 com.xceptance.xlt.visualassertion.mark.blocksize.y=10
 
 ## How the marking should look like - marking type
 # box: Draw a box with blocksize and the difference pixel is in it
 # marker: use yellow highlighter and mark pixel over it
-com.xceptance.xlt.visualassertion.mark.type=box
+com.xceptance.xlt.visualassertion.mark.type=marker
 
 # The algorithm used for the determination of layout mistakes. 
 # FUZZY: Uses color and pixel difference thresholds that determine when the difference in 
@@ -53,12 +53,12 @@ com.xceptance.xlt.visualassertion.algorithm=FUZZY
 # Color threshold for COLORFUZZY and FUZZY. Takes a value between 0 and 1 that stands for the 
 # color difference in percent between two pixels. 0 is equal to an exact pixel by pixel comparison, where
 # no difference is allowed.
-com.xceptance.xlt.visualassertion.tolerance.colors=0.1
+com.xceptance.xlt.visualassertion.tolerance.colors=0
 
 # Number of pixel differences threshold for FUZZY in one comparison block. Takes a value between 0 and 1 that 
 # stands for the percentage of different pixels in one block. 0 is equal to an exact pixel by pixel comparison and
 # one pixel difference is seen as mistake. 
-com.xceptance.xlt.visualassertion.tolerance.pixels=0.1
+com.xceptance.xlt.visualassertion.tolerance.pixels=0
 
 # The side length of one comparison block for the FUZZY algorithm. Takes integer values that stand for the number of 
 # pixels per side. The values provide a way to tolerate shifts of small objects, especially text. The values divide the image 
@@ -71,12 +71,12 @@ com.xceptance.xlt.visualassertion.onFailure.createDifferenceImage=true
 # Flag whether the training mode of the image mask is enabled. While in training mode the module saves found differences
 # in a mask, which can be used to train the algorithms to ignore valid dynamic content changes in the images. Additional training
 # runs adjust the mask further. 
-com.xceptance.xlt.visualassertion.trainingsMode=true
+com.xceptance.xlt.visualassertion.trainingsMode=false
 
 # Flag whether the masked area shall be increased to better mask content changes that are valid
 com.xceptance.xlt.visualassertion.mask.close=false
 
-# Size of the masking area that is filled inbetween pixels that have been found as different 
-com.xceptance.xlt.visualassertion.mask.close.width=10
-com.xceptance.xlt.visualassertion.mask.close.height=10
+# Size of the masking area that is filled in between pixels that have been found as different
+com.xceptance.xlt.visualassertion.mask.close.width=30
+com.xceptance.xlt.visualassertion.mask.close.height=30
 
