--- a/config/visualassertion.properties
+++ b/config/visualassertion.properties
@@ -15,10 +15,11 @@
 #com.xceptance.xlt.imageComparison.algorithm=FUZZY  
 #########################################################################
 
-# Global flag to turn it off, nothing will be done, all code skipped
+# Global flag to turn visual asserations off, nothing will be done, all code is skipped
 com.xceptance.xlt.visualassertion.enabled=true
 
-# Result dirctory for the image output
+# Result directory for the image output, relative to the test suite
+# main directory
 com.xceptance.xlt.visualassertion.resultDirectory=results/visualassertion
 
 ## ID for the current environment that hosts the visualassertion module. 
@@ -36,47 +37,53 @@ com.xceptance.xlt.visualassertion.mark.blocksize.x=10
 com.xceptance.xlt.visualassertion.mark.blocksize.y=10
 
 ## How the marking should look like - marking type
-# box: Draw a box with blocksize and the difference pixel is in it
-# marker: use yellow highlighter and mark pixel over it
+# box: Draw a box with blocksize, the difference box might not be in the center, it is effectivly 
+#      the comparison box used in the algorithm.
+# marker: Use yellow highlighter and mark different pixels in red too
 com.xceptance.xlt.visualassertion.mark.type=marker
 
-# The algorithm used for the determination of layout mistakes. 
+# The algorithm used for the determination of layout differences.
+# 
 # FUZZY: Uses color and pixel difference thresholds that determine when the difference in 
-# a block of pixels is a mistake. First the difference in color between each pixel in a block
-# is checked, if the number of pixels, for which the color difference is too high,
-# exceeds the number limit in one block, those differences are seen as mistake and marked. 
-# COLORFUZZY: Only uses a color threshold to determine a layout mistake. One detected difference will 
-# fail the test.
-# EXACT: Does not use any thresholds, but checks for exact pixel by pixel match of the two pages.
+#        a block of pixels is a error. First the difference in color between each pixel in a block
+#        is checked, if the number of pixels, for which the color difference is too high,
+#        exceeds the number limit in one block, those differences are seen as error and marked. 
+# 
+# COLORFUZZY: Only uses a color threshold to determine a layout error. One detected difference will 
+#             fail the test. Based on a comparison algorithm from http://www.compuphase.com/cmetric.htm . 
+#             The algorithm is based on experiments with people, not theoretics.
+# EXACT: Does not use any thresholds, checks for exact pixel by pixel match
 com.xceptance.xlt.visualassertion.algorithm=FUZZY
 
 # Color threshold for COLORFUZZY and FUZZY. Takes a value between 0 and 1 that stands for the 
 # color difference in percent between two pixels. 0 is equal to an exact pixel by pixel comparison, where
 # no difference is allowed.
-com.xceptance.xlt.visualassertion.tolerance.colors=0
+com.xceptance.xlt.visualassertion.tolerance.colors=0.1
 
 # Number of pixel differences threshold for FUZZY in one comparison block. Takes a value between 0 and 1 that 
-# stands for the percentage of different pixels in one block. 0 is equal to an exact pixel by pixel comparison and
-# one pixel difference is seen as mistake. 
-com.xceptance.xlt.visualassertion.tolerance.pixels=0
+# stands for the percentage of different pixels in one block. 0 is equal to an exact pixel by pixel comparison.
+# 0.1 would mean that 10% of pixels can be different. 
+com.xceptance.xlt.visualassertion.tolerance.pixels=0.1
 
 # The side length of one comparison block for the FUZZY algorithm. Takes integer values that stand for the number of 
 # pixels per side. The values provide a way to tolerate shifts of small objects, especially text. The values divide the image 
 # into squares with a width=height=value. -> Block = xy * xy
 com.xceptance.xlt.visualassertion.fuzzy.blocksize.xy=10
 
-# Flag whether a image shall be created, which displays only the found differences in greyscale on a black background
+# Flag whether a image shall be created, which displays the found differences in grayscale on a black background
 com.xceptance.xlt.visualassertion.onFailure.createDifferenceImage=true
 
 # Flag whether the training mode of the image mask is enabled. While in training mode the module saves found differences
 # in a mask, which can be used to train the algorithms to ignore valid dynamic content changes in the images. Additional training
 # runs adjust the mask further. 
-com.xceptance.xlt.visualassertion.trainingsMode=false
+com.xceptance.xlt.visualassertion.trainingsMode=true
 
 # Flag whether the masked area shall be increased to better mask content changes that are valid
 com.xceptance.xlt.visualassertion.mask.close=false
 
-# Size of the masking area that is filled in between pixels that have been found as different
-com.xceptance.xlt.visualassertion.mask.close.width=30
-com.xceptance.xlt.visualassertion.mask.close.height=30
+# Size of the masking area when a pixel is found to be different when in training mode. Image this as a black stamp in 
+# this size. The middle of the stamp is where the difference pixel is, so you get a nice area around it marked to be ignored as
+# well.
+com.xceptance.xlt.visualassertion.mask.close.width=10
+com.xceptance.xlt.visualassertion.mask.close.height=10
 
