First implementation with machine learning algorithm.

--- a/config/default.properties
+++ b/config/default.properties
@@ -324,12 +324,12 @@ com.xceptance.xlt.maxErrors = 1000
 ## - "phantomjs" ................. PhantomJSDriver 
 ## - "safari" .................... SafariDriver 
 ## - "xlt" ....................... XltDriver (default) 
-xlt.webDriver = firefox
+xlt.webDriver = chrome
 
 ## The path to the driver server executable, if the respective driver requires
 ## one. If you do not specify a path, the driver server must be in your PATH.
-#xlt.webDriver.chrome.pathToDriverServer = /path/to/chromedriver
-#xlt.webDriver.chrome_clientperformance.pathToDriverServer = /path/to/chromedriver
+xlt.webDriver.chrome.pathToDriverServer = /home/tvolkmann/Driver/chromedriver
+#xlt.webDriver.chrome_clientperformance.pathToDriverServer = /home/tvolkmann/Driver/chromedriver
 #xlt.webDriver.ie.pathToDriverServer = c:/path/to/IEDriverServer.exe
 #xlt.webDriver.phantomjs.pathToDriverServer = /path/to/phantomjs
 
@@ -450,7 +450,9 @@ com.xceptance.xlt.useHighPrecisionTimer = true
 #####################################################################
 #
 # Visual Assertion Properties Include
+# or
+# AI Properties Include
 #
 #####################################################################
-com.xceptance.xlt.propertiesInclude.1 = visualassertion.properties
-
+#com.xceptance.xlt.propertiesInclude.1 = visualassertion.properties
+com.xceptance.xlt.propertiesInclude.1 = ai.properties
