--- a/config/project.properties
+++ b/config/project.properties
@@ -14,7 +14,7 @@
 ## The file with test run specific settings.
 com.xceptance.xlt.testPropertiesFile = test.properties
 
-com.xceptance.xlt.propertiesInclude.1 = visualassertion.properties
+com.xceptance.xlt.propertiesInclude.1 = ai.properties
 
 ################################################################################
 #
