--- a/config/test.properties
+++ b/config/test.properties
@@ -76,7 +76,7 @@
 ################################################################################
 
 ## The list of active test cases.
-com.xceptance.xlt.loadtests = TOrder
+com.xceptance.xlt.loadtests = TGuestOrder
 #com.xceptance.xlt.loadtests = TAddToCart TBrowse TGuestOrder TRegister TSearch
 #com.xceptance.xlt.loadtests = TAddToCart TBrowse TCheckout TGuestCheckout TGuestOrder TOrder TRegister TSearch TVisit
 
@@ -112,7 +112,7 @@ com.xceptance.xlt.loadtests.TCheckout.users = 1
 com.xceptance.xlt.loadtests.TGuestCheckout.users = 1
 #com.xceptance.xlt.loadtests.TGuestCheckout.arrivalRate = 100
 
-com.xceptance.xlt.loadtests.TGuestOrder.users = 1
+com.xceptance.xlt.loadtests.TGuestOrder.users = 5
 #com.xceptance.xlt.loadtests.TGuestOrder.arrivalRate = 100
 
 com.xceptance.xlt.loadtests.TOrder.users = 5
