bugfix in read config and constant handling

--- a/config/ai.properties
+++ b/config/ai.properties
@@ -1,6 +1,6 @@
 #######################################################################
 #The possible properties and their default values are:  
-#com.xceptance.xlt.ai.waitTime=300   
+#com.xceptance.xlt.ai.util.Constants.WAITINGTIME = 1000   
 #com.xceptance.xlt.ai.util.Constants.INTENDED_PERCENTAGE_MATCH = 0.80
 #com.xceptance.xlt.ai.util.Constants.USE_COLOR_FOR_COMPARISON = false
 #com.xceptance.xlt.ai.util.Constants.USE_ORIGINAL_SIZE = false
@@ -13,7 +13,7 @@
 #########################################################################
 
 # Global flag to turn visual asserations off, nothing will be done, all code is skipped
-com.xceptance.xlt.ai.visualassertion.enabled=true
+com.xceptance.xlt.ai.visualassertion.enabled = true
 
 # Result directory for the image output, relative to the test suite
 # main directory
@@ -31,34 +31,36 @@ com.xceptance.xlt.ai.waitingTime = 1000
 # Desired percentage value for the self test, until this barrier is confirmed the network will 
 # still learn (use several images which where already seen)
 # procedural value between 0 - 100.00 percent
-com.xceptance.xlt.ai.util.Constants.INTENDED_PERCENTAGE_MATCH = 0.80
+com.xceptance.xlt.ai.INTENDED_PERCENTAGE_MATCH = 0.80
 
 # Color will also be used for image comparison, not recommended for websides with many images
 # or consequently changing content 
-com.xceptance.xlt.ai.util.Constants.USE_COLOR_FOR_COMPARISON = false
+com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = false
 
 # Parameter for enabling down scaling from screenshots or not, this can drastically change 
 # the performance of the algorithm
-com.xceptance.xlt.ai.util.Constants.USE_ORIGINAL_SIZE = false
+com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = false
 
 # procedural value for the difference level used for comparing the images to another
-com.xceptance.xlt.ai.util.Constants.PERCENTAGE_DIFFERENCE = 10
+com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 10
 
 # value for the learning algorithm allowed values are between 0.0 - 1.0
 # affect the learn speed of the neural network, greater values are for faster learning
 # but the accurancy can decrease with higher values
-com.xceptance.xlt.ai.util.Constants.LEARNING_RATE = 0.2
+com.xceptance.xlt.ai.LEARNING_RATE = 0.2
 
 # image format for saving
-com.xceptance.xlt.ai.util.Constants.FORMAT = "png"
+# compatible formats are jpg, png, bmp, jpeg
+# everything else get filtered and will not be loaded
+com.xceptance.xlt.ai.FORMAT = png
 
 # value for the height of the image, only used if USE_ORIGINAL_SIZE is false
-com.xceptance.xlt.ai.util.Constants.IMAGE_HEIGHT = 1200; 
+com.xceptance.xlt.ai.IMAGE_HEIGHT = 1200; 
 
 # value for the width of the image, only used if USE_ORIGINAL_SIZE is false
-com.xceptance.xlt.ai.util.Constants.IMAGE_WIDTH = 800;
+com.xceptance.xlt.ai.IMAGE_WIDTH = 800;
 
 # string array of allowed file extensions
-com.xceptance.xlt.ai.util.Constants.EXTENSIONS = new String[]	{"jpg",	"png", "bmp" , "jpeg"};
+#com.xceptance.xlt.ai.EXTENSIONS = new String[]	{"jpg",	"png", "bmp" , "jpeg"};
 #########################################################################
 
