bugfix in Constant handling and config reading,
images had the wrong size in screenshot reading, fixed

--- a/config/ai.properties
+++ b/config/ai.properties
@@ -41,6 +41,12 @@ com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = false
 # the performance of the algorithm
 com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = false
 
+# value for the height of the image, only used if USE_ORIGINAL_SIZE is false
+com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
+
+# value for the width of the image, only used if USE_ORIGINAL_SIZE is false
+com.xceptance.xlt.ai.IMAGE_WIDTH = 1200
+
 # procedural value for the difference level used for comparing the images to another
 com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 10
 
@@ -53,12 +59,6 @@ com.xceptance.xlt.ai.LEARNING_RATE = 0.2
 # compatible formats are jpg, png, bmp, jpeg
 # everything else get filtered and will not be loaded
 com.xceptance.xlt.ai.FORMAT = png
-
-# value for the height of the image, only used if USE_ORIGINAL_SIZE is false
-com.xceptance.xlt.ai.IMAGE_HEIGHT = 1200; 
-
-# value for the width of the image, only used if USE_ORIGINAL_SIZE is false
-com.xceptance.xlt.ai.IMAGE_WIDTH = 800;
 
 # string array of allowed file extensions
 #com.xceptance.xlt.ai.EXTENSIONS = new String[]	{"jpg",	"png", "bmp" , "jpeg"};
